--- a/TravelMemory/bedeployment.yml
+++ b/TravelMemory/bedeployment.yml
@@ -26,3 +26,6 @@ spec:
               secretKeyRef:
                 name: backend-secret
                 key: MONGO_URI
+          volumeMounts:
+            - name:  app-logs
+              mountPath:  /var/log/app
